# SciFi-Book-QA-Explorer

./: .env  README.md  pyproject.toml
data/: A Martian Odyssey.txt  book6.txt  book9.txt
src/mini_project_1/: project.py
tests/: test_project.py
