[project]
name = "mini-project-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "mini_project_1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
